fix: wrong size canvas

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,7 +5,7 @@
     --ligth-bg-1: #fafafa;
     --ligth-fg: #212121;
 
-    --dark-bg-0: #333;
+    --dark-bg-0: #333333;
     --dark-bg-1: #4a4a4a;
     --dark-fg: #ededed;
     
@@ -170,6 +170,7 @@ header {
     position: relative;
     z-index: 0;
     overflow: hidden;
+    background-color: var(--bg-0);
 }
 
 .header__canvas {
@@ -191,7 +192,7 @@ header {
     --p: 0;
     display: block;
     width: 100%;
-    height: .1rem;
+    height: .2rem;
     background-color: coral;
     clip-path: inset(0 calc((1 - var(--p)) * 100%) 0 0);
     transition: clip-path 150ms ease, opacity 350ms ease;
